# g15stats

./: .gitignore  AGENTS.md  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.md  README.rst  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  g15stats.c  g15stats.h  mkdocs.yml  pyproject.toml
.AGENTS/: main_files.md  mkdocs_material.md  mkdocs_material_reference.md
.AGENTS/mkdocs_material_reference/: README.md  admonitions.md  annotations.md  buttons.md  code-blocks.md  content-tabs.md  data-tables.md  diagrams.md  footnotes.md  formatting.md  grids.md  icons-emojis.md  images.md  lists.md  math.md  tooltips.md
.github/workflows/: build.yml
contrib/: g15stats.yaml.example
contrib/init/: 20g15stats  g15stats.66  g15stats.confd  g15stats.initd  g15stats.run  g15stats.service  rc.g15stats
debian/: autoreconf.after  autoreconf.before  changelog  control  copyright  files  g15stats.1  g15stats.README.Debian  g15stats.examples  g15stats.manpages  g15stats.postinst.debhelper  g15stats.postrm.debhelper  g15stats.substvars  g15stats.user.service  rules
dists/freebsd/: distinfo  pkg-plist
dists/freebsd/files/: g15stats.in
dists/g15stats/: Makefile
docs/: DEPENDENCIES.md  changelog.md  contributing.md  index.md  installation-tutorial.md  installation.md  options.md  requirements.md  screens.md  usage.md
docs/Developing/: Creating-Documentation.md  G15Mirror.md
tests/: convert_g15_frames.c  g15-via-mirror.sh  g15mirror.c  g15mirror_build.sh  gen_screen_mode_dumps.sh  test_config_variables.sh  test_output_file_mode.sh  test_yaml_config.sh  update_screens_docs.sh
