[project]
name = "g15stats-docs"
version = "0.1.0"
description = "G15stats project documentation"
requires-python = ">=3.10"
dependencies = [
    "markdown-exec",
    "markdown-include",
    "mkdocs",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-exclude",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-include-dir-to-nav",
    "mkdocs-macros-plugin",
    "mkdocs-material",
    "mkdocs-minify-plugin",
    "mkdocs-redirects"
]

[project.optional-dependencies]
dev = []
